# contextuai-solo

./: .gitignore  CLAUDE.md  CONNECTIONS-GUIDE.md  CONTRIBUTING.md  FEATURES.md  LICENSE  README.md  SETUP-GUIDE.md  TODO.md  build.ps1  docker-compose.yml  run-tests.ps1  run.sh
.github/workflows/: auto-release.yml  pr-checks.yml  release.yml
agent-library/c-suite/: cdo.md  ceo.md  cfo.md  chro.md  ciso.md  clo.md  cmo.md  coo.md  cpo.md  cro.md  cso.md  cto.md
agent-library/coder-companion/: bug-analyzer.md  code-reviewer.md  doc-generator.md  refactor-advisor.md  test-writer.md
agent-library/data-analytics/: ai-ml-research-scientist.md  analytics-engineer.md  bi-analyst.md  data-analyst.md  data-governance-specialist.md  data-scientist.md
agent-library/design-ux/: brand-designer.md  design-system-architect.md  motion-designer.md  ui-designer.md  ux-designer.md  ux-researcher.md
backend/: .env.example  Dockerfile  __main__.py  app.py  contextuai-solo-backend.spec  database.py  database_factory.py  requirements.txt  scheduler_factory.py  settings.py
coder-role-presets/: cloud-premium.json  custom.json  hybrid.json  local-solo.json
docs/: BUNDLED-MODEL-PLAN.md
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  record-demo.mjs  record-gif.mjs  tailwind.config.ts  take-screenshots.mjs  vite.config.ts
frontend/src-tauri/: Cargo.toml  nsis-hooks.nsh  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: commands.rs  main.rs  sidecar.rs  tray.rs
knowledge-base-packs/: README.md
(+721 files in other folders)
